2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/dbus-glib-1.vapi: add DBus.ObjectPath class

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/sdl.vapi: fix syntax errors

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* THANKS: thank contributors

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add GLogFunc and g_log_set_handler bindings,
	patch by Nicolas Joseph, fixes bug 533601

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gnome-keyring-1/: nullable fixes,
	patch by Andrea Del Signore, fixes bug 533278

	* vapi/gnome-keyring-1.vapi: regenerated

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix private class fields, patch by Jared Moore, fixes bug 532898

	* tests/classes-fields.vala:

	Test class fields

2008-05-23  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Allow invocation of void methods as initializer and iterator in
	for statements, patch by Jared Moore, fixes bug 514801

	* tests/Makefile.am:
	* tests/statements-iteration.exp:
	* tests/statements-iteration.vala:

	Test void methods in for statements

2008-05-22  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am:
	* vapi/tiff.vapi:

	Add libtiff bindings, patch by Christian Meyer

2008-05-20  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:
	* vala/valascanner.vala:
	* vala/valatokentype.vala:

	Add support for """verbatim strings"""

2008-05-20  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicmethodbinding.vala:

	Fix D-Bus method calls returning arrays, fixes bug 529351

2008-05-19  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valagenieparser.vala:
	* vala/valageniescanner.vala:
	* vala/valagenietokentype.vala:
	* vala/valaparser.vala:
	* vala/valasourcefile.vala:
	* compiler/valacompiler.vala:

	Add parser for Genie, patch by Jamie McCracken

2008-05-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Use g_free as default free function for nullable value types
