@@ -1,5 +1,12 @@
 2008-05-23  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodeclassbinding.vala:
+
+	Support [DBus (visible = false)] for methods, properties, and
+	signals, based on patch by Ali Sabil, fixes bug 532254
+
+2008-05-23  Jürg Billeter  <j@bitron.ch>
+
 	* vapi/dbus-glib-1.vapi: add DBus.ObjectPath class
 
 2008-05-23  Jürg Billeter  <j@bitron.ch>
